--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 打不死的小强 
+title: 郁金香的季节 
 subtitle: 博观而约取，厚积而薄发
 description:
 keywords:
