--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 郁金香的季节 
-subtitle: 博观而约取，厚积而薄发
+title: HelloWorld
+subtitle: 博观约取
 description:
 keywords:
-author: Ryan Tung
+author: LuJie
 language: zh-Hans
 timezone:
 
